[tool.black]
line-length = 88
target-version = ["py310"]
exclude = '''
(
    \.git/
  | \.vscode/
  | env/
)
'''

[tool.isort]
profile = "black"

[tool.poetry]
name = "bup_cron"
version = "2.0.0"
description = "bup jobs wrapper"
authors = ["Antoine Beaupré <anarcat@debian.org>"]
keywords = ["bup", "cron", "backups"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Environment :: No Input/Output (Daemon)",
  "Intended Audience :: System Administrators",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3",
  "Topic :: System :: Archiving :: Backup",
]
license = "AGPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^23.7.0"
flake8 = "^6.0.0"
isort = "^5.12.0"